<resources>
    <string name="app_name">GuakHawk</string>
    <string name="title_home">Home</string>
    <string name="title_create_group">Create Group</string>
    <string name="title_create_group_options">Create Group Options</string>
    <string name="title_notifications">Notifications</string>
    <string name="back">Back</string>

    <string-array name="create_group_friends_search_array">
        <item>Anushka Angamuthu</item>
        <item>Calvin Hoffmann</item>
        <item>Christian Halvorson</item>
        <item>Conor Hogan</item>
        <item>Jonathan Amos</item>
        <item>Maryam Masood</item>
    </string-array>

    <string-array name="create_group_options_meals_array">
        <item>Breakfast</item>
        <item>Brunch</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Other</item>
    </string-array>

    <string-array name="create_group_options_events_array">
        <item>Casual</item>
        <item>Date</item>
        <item>Game Night</item>
        <item>Celebration</item>
        <item>Birthday</item>
    </string-array>

    <string name="friends">Friends</string>
    <string name="friends_home_search">Search</string>
    <string name="friends_home_friend1">Conor Hogan</string>
    <string name="friends_home_friend2">Christian Halvorson</string>
    <string name="friends_home_friend3">Maryam Masood</string>
    <string name="friends_home_friend4">Calvin Hoffmann</string>
    <string name="friends_home_friend5">Anushka Angamuthu</string>
    <string name="friends_home_friend6">Jonathan Amos</string>

    <string name="friend_requests">Friend Requests</string>
    <string name="friends_request_1">Carl Strutivant</string>
    <string name="friends_request_2">Chris J. Dovolis</string>

    <string name="friend_searched_1">Georgie Qiao Jin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_respond_to_invite3">RespondToInvite3Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
