<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.guakhawk.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_create_group"
        android:name="com.example.guakhawk.ui.createGroup.CreateGroupFragment"
        android:label="@string/title_create_group"
        tools:layout="@layout/fragment_create_group" >
        <action
            android:id="@+id/action_navigation_create_group_to_navigation_create_group_options"
            app:destination="@id/navigation_create_group_options"
            app:popUpTo="@id/navigation_create_group"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.guakhawk.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_create_group_options"
        android:name="com.example.guakhawk.ui.createGroupOptions.CreateGroupOptionsFragment"
        android:label="@string/title_create_group_options"
        tools:layout="@layout/fragment_create_group_options" >
        <action
            android:id="@+id/action_navigation_create_group_options_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>