<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/friendsToolbar"
        android:layout_width="423dp"
        android:layout_height="70dp"
        android:background="@color/marvel_green"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <SearchView
        android:id="@+id/friendsHomeSearch"
        android:layout_width="32dp"
        android:layout_height="33dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendsToolbar"
        app:layout_constraintVertical_bias="0.031" />

    <TextView
        android:id="@+id/friendsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/friends"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/friendsToolbar"
        app:layout_constraintEnd_toEndOf="@+id/friendsToolbar"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="@+id/friendsToolbar"
        app:layout_constraintTop_toTopOf="@+id/friendsToolbar"
        app:layout_constraintVertical_bias="0.421" />

    <LinearLayout
        android:id="@+id/friendsLinearLayout"
        android:layout_width="412dp"
        android:layout_height="596dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendsToolbar"
        app:layout_constraintVertical_bias="0.761">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/FHIVperson1"
                android:layout_width="11dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_person_foreground" />

            <TextView
                android:id="@+id/friend1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/friends_home_friend1"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/FHIVPersonInfo1"
                android:layout_width="5dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_three_dots_foreground" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/FHIVperson2"
                android:layout_width="21dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_person_foreground" />

            <TextView
                android:id="@+id/friend2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/friends_home_friend2"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/FHIVPersonInfo2"
                android:layout_width="16dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_three_dots_foreground" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/FHIVperson3"
                android:layout_width="18dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_person_foreground" />

            <TextView
                android:id="@+id/friend3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/friends_home_friend3"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/FHIVPersonInfo3"
                android:layout_width="14dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_three_dots_foreground" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/FHIVperson4"
                android:layout_width="18dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_person_foreground" />

            <TextView
                android:id="@+id/friend4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/friends_home_friend4"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/FHIVPersonInfo4"
                android:layout_width="16dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_three_dots_foreground" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/FHIVperson5"
                android:layout_width="23dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_person_foreground" />

            <TextView
                android:id="@+id/friend5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/friends_home_friend5"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/FHIVPersonInfo5"
                android:layout_width="23dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_three_dots_foreground" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/FHIVperson6"
                android:layout_width="16dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_person_foreground" />

            <TextView
                android:id="@+id/friend6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/friends_home_friend6"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/FHIVPersonInfo6"
                android:layout_width="14dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_three_dots_foreground" />
        </LinearLayout>


    </LinearLayout>

    <ImageButton
        android:id="@+id/friendRequests"
        android:layout_width="81dp"
        android:layout_height="74dp"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_friend_requests_icon_foreground" />

    <ImageButton
        android:id="@+id/processSearch"
        android:layout_width="70dp"
        android:layout_height="62dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/friendsLinearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendsToolbar"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_add_foreground" />


</androidx.constraintlayout.widget.ConstraintLayout>