<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/friendsToolbar"
        android:layout_width="423dp"
        android:layout_height="70dp"
        android:background="@color/marvel_green"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/friendRequestsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/friend_requests"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/friendsToolbar"
        app:layout_constraintEnd_toEndOf="@+id/friendsToolbar"
        app:layout_constraintHorizontal_bias="0.033"
        app:layout_constraintStart_toStartOf="@+id/friendsToolbar"
        app:layout_constraintTop_toTopOf="@+id/friendsToolbar"
        app:layout_constraintVertical_bias="0.421" />

    <ImageButton
        android:id="@+id/friendRequests"
        android:layout_width="81dp"
        android:layout_height="74dp"
        android:layout_marginTop="0dp"
        android:adjustViewBounds="true"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_friend_requests_icon_foreground" />

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="190dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friendsToolbar"
        app:layout_constraintVertical_bias="0.125">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/FRIV1"
                android:layout_width="11dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_person_foreground" />

            <TextView
                android:id="@+id/friendRequestsName1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/friends_request_1"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/requestDeny1"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:backgroundTint="#00FFFFFF"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_denyt_friend_request_icon_foreground" />

            <ImageButton
                android:id="@+id/requestAccept1"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:backgroundTint="#00FFFFFF"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_accept_friend_request_icon_foreground" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="87dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/FRIV2"
                android:layout_width="11dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_person_foreground" />

            <TextView
                android:id="@+id/friendRequestsName2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/friends_request_2"
                android:textAlignment="center"
                android:textSize="16sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/requestDeny2"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:backgroundTint="#00FFFFFF"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_denyt_friend_request_icon_foreground" />

            <ImageButton
                android:id="@+id/requestAccept2"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:backgroundTint="#00FFFFFF"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_accept_friend_request_icon_foreground" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="0dp"
        android:layout_height="68dp"
        android:layout_marginTop="724dp"
        android:scaleType="fitXY"
        android:src="@drawable/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/button_home_page"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitXY"
        android:src="@drawable/ic_home_black_24dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
        app:layout_constraintEnd_toStartOf="@+id/button_new_group"
        app:layout_constraintStart_toStartOf="@+id/imageView16"
        app:layout_constraintTop_toTopOf="@+id/imageView16" />

    <ImageButton
        android:id="@+id/button_friends_page"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitXY"
        android:src="@drawable/friends_tab"
        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
        app:layout_constraintEnd_toEndOf="@+id/imageView16"
        app:layout_constraintStart_toEndOf="@+id/button_new_group"
        app:layout_constraintTop_toTopOf="@+id/imageView16" />

    <ImageButton
        android:id="@+id/button_new_group"
        android:layout_width="84dp"
        android:layout_height="74dp"
        android:backgroundTint="#00FFFFFF"
        android:scaleType="fitXY"
        android:src="@android:drawable/ic_menu_add"
        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
        app:layout_constraintEnd_toEndOf="@+id/imageView16"
        app:layout_constraintStart_toStartOf="@+id/imageView16"
        app:layout_constraintTop_toTopOf="@+id/imageView16"
        app:tint="#000000" />

</androidx.constraintlayout.widget.ConstraintLayout>